# felixdev

./: .classpath  .gitignore  .project  build.xml  dependency-reduced-pom.xml  pom.xml  readme.txt  socks.properties
OSGi-Rhino/: pom.xml
com.ymbl.smartgateway.extension/: .project  pom.xml
com.ymbl.smartgateway.extension/jni/: com_ymbl_smartgateway_extension_IpTables.c  com_ymbl_smartgateway_extension_IpTables.h  com_ymbl_smartgateway_extension_Lua.c  com_ymbl_smartgateway_extension_Lua.h  com_ymbl_smartgateway_extension_XL2tpd.c  com_ymbl_smartgateway_extension_XL2tpd.h  compile.sh  dlog.h  exec.lua  myplugin.lua  options.l2tpd.client  xl2tpd.conf
com.ymbl.smartgateway.extension/jni/RedirectToSock5Service/: Cfg.cpp  Cfg.h  Makefile.am  RedirectClient.h  RedirectListener.cpp  RedirectListener.h  RedirectToSocks5Service.cpp  RedirectToSocks5Service.h  RedirectToSocks5Service.sln  RedirectToSocks5Service.vcxproj  Socks5.h  Stdafx.h  autogen.sh  build.sh  com_ymbl_smartgateway_extension_RedirectToSocks5Service.cpp  com_ymbl_smartgateway_extension_RedirectToSocks5Service.h  configure.ac  main.cpp
com.ymbl.smartgateway.extension/jni/RedirectToSock5Service/Java/: Makefile.am  RedirectToSocks5Service.cpp  RedirectToSocks5Service.h  RedirectToSocks5Service.java  autogen.sh  build.sh  configure.ac
com.ymbl.smartgateway.extension/jni/RedirectToSock5Service/Utils/: AutoBuffer.h  LinkedList.h  ObjectPool.h  TinyLog.cpp  TinyLog.h  Utils.h  flist.sh  initDaemon.h
com.ymbl.smartgateway.extension/jni/RedirectToSock5Service/Utils/Event/: EventDefer.cpp  EventDefer.h  ListenerEvD.h  RefBuffer.h  Signals.inl  SocketUtils.cpp  SocketUtils.h  TcpAcceptor.cpp  TcpAcceptor.h
com.ymbl.smartgateway.extension/jni/RedirectToSock5Service/extra/lib/arm-develop/: libevent_openssl-2.1.so.6.0.2
com.ymbl.smartgateway.extension/jni/RedirectToSock5Service/extra/lib/arm-develop/pkgconfig/: libevent_openssl.pc
com.ymbl.smartgateway.extension/jni/RedirectToSock5Service/extra/lib/mips-en751221/: libevent_core-2.1.so.6.0.2  libevent_openssl-2.1.so.6.0.2  libevent_pthreads-2.1.so.6.0.2
com.ymbl.smartgateway.extension/jni/RedirectToSock5Service/extra/lib/mips-en751221/pkgconfig/: libevent_openssl.pc
com.ymbl.smartgateway.extension/jni/extra/libevent/include/event2/: event-config.h
com.ymbl.smartgateway.extension/jni/libpcap/lib/arm-develop/: libpcap.so.1.3.0
com.ymbl.smartgateway.extension/jni/ncurses/lib/arm-develop/: libncurses.so.5.9
com.ymbl.smartgateway.extension/jni/ncurses/lib/mips-en751221/: libncurses.so.5.9
com.ymbl.smartgateway.extension/jni/patches/: iptables-jni-1.4.21.patch  iptables-jni-1.6.2.patch  lua-jni-5.1.5.patch  ppp-jni-2.4.7.patch  xl2tpd-jni-1.3.6.patch
com.ymbl.smartgateway.extension/jni/readline/lib/arm-develop/: libhistory.so.6.2
com.ymbl.smartgateway.extension/jni/readline/lib/mips-en751221/: libhistory.so.6.2
com.ymbl.smartgateway.jsocks/: .project  pom.xml
com.ymbl.smartgateway.jsocks/src/main/java/: config.properties
com.ymbl.smartgateway.rhinosite/: build.xml  pom.xml
com.ymbl.smartgateway.rhinosite/classes/: dependencies
com.ymbl.smartgateway.transite/: .classpath  .project  pom.xml
com.ymbl.smartgateway.transite/jni/: com_ymbl_smartgateway_transite_TransiteActivator.c  com_ymbl_smartgateway_transite_TransiteActivator.cpp  com_ymbl_smartgateway_transite_TransiteActivator.h  compile.sh  ex.sh  iptables-jni-1.6.2.patch
com.ymbl.smartgateway.transite/jni/patches/: iptables-jni-1.4.21.patch
com.ymbl.smartgateway.transite/src/main/java/: config.properties
felix/: .classpath  .project
(+128 files in other folders)
